2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string),
	(update_color_buttons_from_settings):
	* appearance-themes.c: (theme_is_equal):
	* theme-util.c: (theme_parse_color_scheme),
	(theme_color_scheme_equal):
	* theme-util.h: make color scheme comparisons work much more reliably

2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_update_description): add a comment
	for translators (bug #460506)

2007-07-26  Denis Washington <denisw@svn.gnome.org>

	* data/appearance.glade:
	Fixed a bug introduced in my last commit which caused to make the
	button box appear above the cursors list in the theme details window.

	* appearance-style.c: (cursor_theme_sort_func), (prepare_list):
	Make "Default Pointer" always appear as first item in the list.

2007-07-26  Denis Washington <denisw@svn.gnome.org>

	* data/appearance.glade:
	* appearance-style.c: 
	* appearance-themes.c: (theme_load_from_gconf), (cursor_theme_changed),
	(prepare_list), (style_init):
	* theme-save.c: (write_theme_to_disk):
	* theme-util.h:
	Re-add basic support for cursor themes for X servers without the Xcursor
	extension, like the one on Solaris.

2007-07-25  Thomas Wood  <thos@gnome.org>

	Patch by:  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-wp-item.c: (gnome_wp_item_update_description):Simplify tooltip
	descriptions.  Change "Location" to "Folder".  Do not overuse bold text.
	Closes bug 460111.


2007-07-25  Denis Washington <denisw@svn.gnome.org>

	* appearance-style.c: (prepare_list):
	* appearance-themes.c: (theme_load_from_gconf):
	* theme-save.c: (write_theme_to_disk):
	Implement saving of the cursor theme name in metathemes, and add a
	"Default Pointer" option to the cursor theme list in Theme Details.

2007-07-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_load_from_gconf): when reading current
	settings from gconf, get the color scheme from the gtk theme if necessary