@@ -1,5 +1,11 @@
 2007-07-26  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-style.c: (update_color_buttons_from_settings),
+	(color_scheme_defaults_button_clicked_cb): really unset the gconf key
+	when reverting colors
+
+2007-07-26  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (update_color_buttons_from_string),
 	(update_color_buttons_from_settings):
 	* appearance-themes.c: (theme_is_equal):
